--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "ng-webpack-sandbox",
+  "name": "minimum-angular",
   "version": "1.0.0",
   "description": "The bare minimum angular app with webpack. Simple to understand, don't actually use.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js"
+    "postinstall": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
+    "start": "http-server ./build/client/"
   },
   "author": "David Zhang",
   "license": "MIT",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.3",
+    "http-server": "^0.10.0",
     "typescript": "^2.3.3",
     "webpack": "^2.6.1"
   }
